--- a/assets/css/templatemo-klassy-cafe.css
+++ b/assets/css/templatemo-klassy-cafe.css
@@ -548,7 +548,7 @@ header
     width: 100%;
   }
   .header-area {
-    background-color: #f7f7f7;
+    background-color: #ffffff;
     padding: 0px 15px;
     height: 100px;
     box-shadow: none;
