--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -8,30 +8,25 @@
             <h2>Contact us for catering options</h2>
           </div>
           <p>
-            Donec pretium est orci, non vulputate arcu hendrerit a. Fusce a
-            eleifend riqsie, namei sollicitudin urna diam, sed commodo purus
-            porta ut.
+            To place a catering order, contact us using one of the methods down below.
           </p>
           <div class="row">
             <div class="col-lg-6">
               <div class="phone">
                 <i class="fa fa-phone"></i>
-                <h4>Phone Numbers</h4>
-                <span
-                  ><a href="#">080-090-0990</a><br /><a href="#"
-                    >080-090-0880</a
-                  ></span
-                >
+                <h4>Phone Number</h4>
+                <span>
+                  <a href="tel:805-4500645">805-450-0645</a>
+                </span>
               </div>
             </div>
             <div class="col-lg-6">
               <div class="message">
                 <i class="fa fa-envelope"></i>
-                <h4>Emails</h4>
+                <h4>Email</h4>
                 <span
-                  ><a href="#">hello@company.com</a><br /><a href="#"
-                    >info@company.com</a
-                  ></span
+                  ><a href="heather@lillymaysdesserts.com">heather@lillymaysdesserts.com</a>
+                   </span
                 >
               </div>
             </div>
