--- a/_includes/header.html
+++ b/_includes/header.html
@@ -12,7 +12,7 @@
           </div>
         </div>
       </div>
-      <div class="col-lg-8">
+      <div class="col-lg-8 overflow-hidden">
         <img src="/assets/images/header.jpg" alt="" />
       </div>
     </div>
