--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -48,7 +48,7 @@
                   <a href="#top" class="active">Home</a>
                 </li>
                 <li class="scroll-to-section"><a href="#about">About</a></li>
-                <li class="scroll-to-section"><a href="#offers">Menu</a></li>
+                <!-- <li class="scroll-to-section"><a href="#offers">Menu</a></li> -->
                 <li class="scroll-to-section">
                   <a href="#reservation">Contact Us</a>
                 </li>
