--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -39,7 +39,7 @@
             <nav class="main-nav">
               <!-- ***** Logo Start ***** -->
               <a href="index.html" class="logo">
-                <img src="/assets/images/logo-text.jpg" width="200px" />
+                <img src="/assets/images/logo.jpg" height="80px" />
               </a>
               <!-- ***** Logo End ***** -->
               <!-- ***** Menu Start ***** -->
