--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,6 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-STZLXY5HXK"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-STZLXY5HXK');
+    </script>
     <title>{{ site.title }}</title>
     <meta charset="utf-8" />
     <meta
