--- a/_includes/about.html
+++ b/_includes/about.html
@@ -5,7 +5,7 @@
         <div class="left-text-content">
           <div class="section-heading">
             <h6>About Us</h6>
-            <h2>Satisfying desserts to your door</h2>
+            <h2>Quality Asheville Desserts</h2>
           </div>
           <p>
             Lilly May's is committed to offering large and small format hand
@@ -17,6 +17,10 @@
             or a baby shower brunch with yogurt jars and cupcakes, we are here
             to provide you with the highest quality sweets and the highest
             quality service.
+          </p>
+          <p>
+            Locacted in Asheville, North Carolina, Lilly May's is created by Heather Gressett, one
+            of <a href="https://avltoday.6amcity.com/female-chefs-asheville/">Asheville's top pastry chefs</a>.
           </p>
           <div class="row">
             <div class="col-4">
