--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,20 +1,8 @@
 <div id="top">
-  <div class="container-fluid">
-    <div class="row">
-      <div class="col-lg-4">
-        <div class="left-content">
-          <div class="inner-content">
-            <h4>Lilly May's</h4>
-            <h6>Desserts</h6>
-            <div class="main-white-button scroll-to-section">
-              <a href="#reservation">Contact Us</a>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="col-lg-8 overflow-hidden">
-        <img src="/assets/images/header.jpg" alt="" />
-      </div>
-    </div>
+  <div class="text-center">
+    <img class="mx-auto d-block" src="/assets/images/logo.jpg" alt="" />
+    <a href="#reservation" class="mt-5 btn btn-danger mx-auto scroll-to-section">
+      Contact Us
+    </a>
   </div>
 </div>
