--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -46,7 +46,7 @@
             <nav class="main-nav">
               <!-- ***** Logo Start ***** -->
               <a href="index.html" class="logo">
-                <img src="/assets/images/logo.jpg" height="80px" />
+                Lilly May's
               </a>
               <!-- ***** Logo End ***** -->
               <!-- ***** Menu Start ***** -->
