--- a/_includes/about.html
+++ b/_includes/about.html
@@ -19,18 +19,27 @@
             quality service.
           </p>
           <p>
-            Locacted in Asheville, North Carolina, Lilly May's is created by Heather Gressett, one
-            of <a href="https://avltoday.6amcity.com/female-chefs-asheville/">Asheville's top pastry chefs</a>.
+            Locacted in Asheville, North Carolina, Lilly May's is created by
+            Heather Gressett (formally Heather May), one of
+            <a href="https://avltoday.6amcity.com/female-chefs-asheville/"
+              >Asheville's top pastry chefs</a
+            >.
           </p>
           <div class="row">
             <div class="col-4">
-              <img src="assets/images/about-thumb-01.jpg" alt="" />
+              <a href="assets/images/about-01.jpg">
+                <img src="assets/images/about-thumb-01.jpg" alt="" />
+              </a>
             </div>
             <div class="col-4">
-              <img src="assets/images/about-thumb-02.jpg" alt="" />
+              <a href="assets/images/about-02.jpg">
+                <img src="assets/images/about-thumb-02.jpg" alt="" />
+              </a>
             </div>
             <div class="col-4">
-              <img src="assets/images/about-thumb-03.jpg" alt="" />
+              <a href="assets/images/about-03.jpg">
+                <img src="assets/images/about-thumb-03.jpg" alt="" />
+              </a>
             </div>
           </div>
         </div>
