--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1668,3 +1668,32 @@ responsive
     opacity: 0;
   }
 }
+
+
+#grid {
+  padding: 50px 0 0 0;
+}
+
+#grid .section-heading {
+  padding: 0 0 50px 0;
+}
+
+#grid .row {
+  display: flex;
+  flex-wrap: wrap;
+  padding: 0 4px;
+}
+
+/* Create four equal columns that sits next to each other */
+#grid .column {
+  flex: 25%;
+  max-width: 25%;
+  padding: 0 4px;
+}
+
+#grid .column img {
+  margin-top: 8px;
+  vertical-align: middle;
+  width: 100%;
+}
+
