--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -55,6 +55,9 @@
                   <a href="#top" class="active">Home</a>
                 </li>
                 <li class="scroll-to-section"><a href="#about">About</a></li>
+                <li class="scroll-to-section">
+                  <a href="#grid">Gallery</a>
+                </li>
                 <!-- <li class="scroll-to-section"><a href="#offers">Menu</a></li> -->
                 <li class="scroll-to-section">
                   <a href="#reservation">Contact Us</a>
