--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -1,115 +1,51 @@
-<section class="section" id="offers">
+<section class="section" id="menu">
   <div class="container">
     <div class="row">
       <div class="col-lg-4 offset-lg-4 text-center">
         <div class="section-heading">
-          <h2>Menu</h2>
+          <h1 class="fancy">Catering Menu</h1>
         </div>
       </div>
     </div>
-    <div class="row">
-      <div class="col-lg-12">
-        <div class="row" id="tabs">
-          <div class="col-lg-12">
-            <section class="tabs-content">
-              <article id="tabs-1">
-                <div class="row">
-                  <div class="col-lg-6">
-                    <div class="row">
-                      <div class="left-list">
-                        <div class="col-lg-12">
-                          <div class="tab-item">
-                            <img src="assets/images/tab-item-01.png" alt="" />
-                            <h4>Fresh Chicken Salad</h4>
-                            <p>
-                              Lorem ipsum dolor sit amet, consectetur koit
-                              adipiscing elit, sed do.
-                            </p>
-                            <div class="price">
-                              <h6>$10.50</h6>
-                            </div>
-                          </div>
-                        </div>
-                        <div class="col-lg-12">
-                          <div class="tab-item">
-                            <img src="assets/images/tab-item-02.png" alt="" />
-                            <h4>Orange Juice</h4>
-                            <p>
-                              Lorem ipsum dolor sit amet, consectetur koit
-                              adipiscing elit, sed do.
-                            </p>
-                            <div class="price">
-                              <h6>$8.50</h6>
-                            </div>
-                          </div>
-                        </div>
-                        <div class="col-lg-12">
-                          <div class="tab-item">
-                            <img src="assets/images/tab-item-03.png" alt="" />
-                            <h4>Fruit Salad</h4>
-                            <p>
-                              Lorem ipsum dolor sit amet, consectetur koit
-                              adipiscing elit, sed do.
-                            </p>
-                            <div class="price">
-                              <h6>$9.90</h6>
-                            </div>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="col-lg-6">
-                    <div class="row">
-                      <div class="right-list">
-                        <div class="col-lg-12">
-                          <div class="tab-item">
-                            <img src="assets/images/tab-item-04.png" alt="" />
-                            <h4>Eggs Omelette</h4>
-                            <p>
-                              Lorem ipsum dolor sit amet, consectetur koit
-                              adipiscing elit, sed do.
-                            </p>
-                            <div class="price">
-                              <h6>$6.50</h6>
-                            </div>
-                          </div>
-                        </div>
-                        <div class="col-lg-12">
-                          <div class="tab-item">
-                            <img src="assets/images/tab-item-05.png" alt="" />
-                            <h4>Dollma Pire</h4>
-                            <p>
-                              Lorem ipsum dolor sit amet, consectetur koit
-                              adipiscing elit, sed do.
-                            </p>
-                            <div class="price">
-                              <h6>$5.00</h6>
-                            </div>
-                          </div>
-                        </div>
-                        <div class="col-lg-12">
-                          <div class="tab-item">
-                            <img src="assets/images/tab-item-06.png" alt="" />
-                            <h4>Omelette & Cheese</h4>
-                            <p>
-                              Lorem ipsum dolor sit amet, consectetur koit
-                              adipiscing elit, sed do.
-                            </p>
-                            <div class="price">
-                              <h6>$4.10</h6>
-                            </div>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </article>
-            </section>
-          </div>
-        </div>
-      </div>
-    </div>
+      <h3 class="mb-3 mt-5">Breakfast & Brunch</h3>
+      <ul>
+        <li><strong>Babka</strong></li>
+        <li><strong>Sticky Buns</strong></li>
+        <li><strong>Bran Muffins</strong></li>
+        <li><strong>Cheese Board</strong></li>
+        <li><strong>Breads</strong> (choice of zucchini, carrot apple, pumpkin or banana bread)</li>
+        <li><strong>Beignets</strong> with choice of accompaniment (Can only be made on site, must have a kitchen available)</li>
+        <li><strong>Local Fruit Salad</strong> (GF)</li>
+        <li><strong>Yogurt Bar</strong> with house-made yogurt from local dairy, farmers market seasonal fruit, and Seasonal granola (GF)</li>
+        <li><strong>Soft Pretzels</strong></li>
+      </ul>
+      <h3 class="mb-3 mt-5">Lunch & Dinner</h3>
+      <ul>
+        <li><strong>Chocolate Crunch Bar</strong> </li>
+        <li><strong>Banana Biscoff Mini Pies</strong></li>
+        <li><strong>Tiramisu Cheesecake</strong></li>
+        <li><strong>Chocolate Chip Cookies</strong></li>
+        <li><strong>Brownies</strong></li>
+        <li><strong>Sesame Cocoa Bites</strong></li>
+        <li><strong>Hazelnut Crunch Bar</strong></li>
+        <li><strong>Banana Pudding Cup</strong></li>
+        <li><strong>Strawberry Rice Krispy Treat</strong></li>
+        <li><strong>Chocolate Torte</strong> (GF)</li>
+        <li><strong>Sexy Brownie</strong> with brownie, oreo, and blondie layers</li>
+        <li><strong>Panna Cotta Cups</strong> with strawberry crumble and fresh berries (seasonal)</li>
+        <li><strong>Pretzel Bread Pudding</strong> with whipped cream</li>
+        <li><strong>Mini Strawberry Shortcakes</strong> (seasonal)</li>
+        <li><strong>Chocolate Truffles</strong> (Strawberry, Dark Chocolate Orange, Milk Chocolate Honey, Seasonal Flavors Available)</li>
+      </ul>
+      <h3 class="mb-3 mt-5">Cake Flavors</h3>
+      <ul>
+        <li><strong>Carrot Cake</strong> with cream cheese frosting</li>
+        <li><strong>Red Velvet</strong> with cream cheese frosting and raspberries</li>
+        <li><strong>Portillos Chocolate Cake</strong> with espresso buttercream</li>
+        <li><strong>German Chocolate Cake</strong> </li>
+        <li><strong>Funfetti Cake</strong> with caramelized milk crumble and buttercream</li>
+        <li><strong>Chocolate Cheerwine Cake</strong> (GF) with buttercream</li>
+        <li><strong>S’more Cake</strong> with devil's food cake, graham cracker pudding, marshmallow pudding, and bruleed swiss meringues</li>
+      </ul>
   </div>
 </section>
