--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -52,15 +52,15 @@
               <!-- ***** Menu Start ***** -->
               <ul class="nav">
                 <li class="scroll-to-section">
-                  <a href="#top" class="active">Home</a>
+                  <a href="/#top" class="active">Home</a>
                 </li>
-                <li class="scroll-to-section"><a href="#about">About</a></li>
+                <li class="scroll-to-section"><a href="/#about">About</a></li>
                 <li class="scroll-to-section">
-                  <a href="#grid">Gallery</a>
+                  <a href="/#grid">Gallery</a>
                 </li>
-                <!-- <li class="scroll-to-section"><a href="#offers">Menu</a></li> -->
+                <li><a href="/menu">Menu</a></li>
                 <li class="scroll-to-section">
-                  <a href="#reservation">Contact Us</a>
+                  <a href="/#reservation">Contact Us</a>
                 </li>
               </ul>
               <a class="menu-trigger">
