--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -145,6 +145,10 @@ body {
   }
 }
 
+.fancy {
+  font-family: 'Dancing Script', cursive;
+}
+
 .main-white-button a {
   font-size: 13px;
   color: #fb5849;
