--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -80,10 +80,13 @@
             <div class="right-text-content">
               <ul class="social-icons">
                 <li>
-                  <a href="https://www.facebook.com/Lillymaysdesserts/"><i class="fa fa-facebook"></i></a>
+                  <a href="{{site.links.etsy}}"><i class="fab fa-etsy"></i></a>
                 </li>
                 <li>
-                  <a href="https://www.instagram.com/lillymaysdesserts/"><i class="fa fa-instagram"></i></a>
+                  <a href="{{site.links.facebook}}"><i class="fab fa-facebook-f"></i></a>
+                </li>
+                <li>
+                  <a href="{{site.links.instagram}}"><i class="fab fa-instagram"></i></a>
                 </li>
               </ul>
             </div>
