--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -660,46 +660,14 @@ banner
   padding: 0px;
 }
 
-#top .left-content {
-  background-image: url(../images/top-left-bg.jpg);
-  background-position: center center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  position: relative;
-  width: 100%;
-  height: 100%;
+#top .top-social {
+  font-size: 30px;
+  margin-top: 50px;
+  color: black;
 }
 
-#top .left-content .inner-content {
-  position: absolute;
-  top: 50%;
-  transform: translate(-50%, -50%);
-  left: 50%;
-}
-
-#top .left-content h4 {
-  font-family: 'Dancing Script', cursive;
-  color: #fff;
-  font-size: 54px;
-  font-weight: 700;
-}
-
-#top .left-content h6 {
-  font-size: 15px;
-  text-transform: uppercase;
-  font-weight: 600;
-  color: #fff;
-  letter-spacing: 3px;
-  margin-top: 5px;
-}
-
-#top .left-content .main-white-button  {
-  margin-top: 25px;
-  margin-bottom: 10px;
-}
-
-#top .left-content .main-white-button a {
-  display: inline-block;
+#top .top-social a{
+  color: #2a2a2a;
 }
 
 /* ==== Main CSS === */
