--- a/_includes/header.html
+++ b/_includes/header.html
@@ -10,7 +10,7 @@
     </a>
     <div class="top-social">
         <a aria-label="Etsy" href="{{site.links.etsy}}"><i class="fab fa-etsy"></i></a>
-        <a aria-label="Facebook" class="p-5" href="{{site.links.facebook}}"><i class="fab fa-facebook"></i></a>
+        <a aria-label="Facebook" class="m-5" href="{{site.links.facebook}}"><i class="fab fa-facebook"></i></a>
         <a aria-label="Instagram" href="{{site.links.instagram}}"><i class="fab fa-instagram"></i></a>
     </div> 
   </div>
