--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -22,30 +22,29 @@
       <h3 class="mb-3 mt-5">Lunch & Dinner</h3>
       <ul>
         <li><strong>Chocolate Crunch Bar</strong> </li>
-        <li><strong>Banana Biscoff Mini Pies</strong></li>
-        <li><strong>Tiramisu Cheesecake</strong></li>
-        <li><strong>Chocolate Chip Cookies</strong></li>
-        <li><strong>Brownies</strong></li>
-        <li><strong>Sesame Cocoa Bites</strong></li>
-        <li><strong>Hazelnut Crunch Bar</strong></li>
-        <li><strong>Banana Pudding Cup</strong></li>
-        <li><strong>Strawberry Rice Krispy Treat</strong></li>
-        <li><strong>Chocolate Torte</strong> (GF)</li>
-        <li><strong>Sexy Brownie</strong> with brownie, oreo, and blondie layers</li>
-        <li><strong>Panna Cotta Cups</strong> with strawberry crumble and fresh berries (seasonal)</li>
-        <li><strong>Pretzel Bread Pudding</strong> with whipped cream</li>
-        <li><strong>Mini Strawberry Shortcakes</strong> (seasonal)</li>
-        <li><strong>Chocolate Truffles</strong> (Strawberry, Dark Chocolate Orange, Milk Chocolate Honey, Seasonal Flavors Available)</li>
+        <li><strong>Tiramisu Cheesecake</strong> </li>
+        <li><strong>Chocolate Chip Cookies</strong> </li>
+        <li><strong>Red Velvet Brownies</strong> </li>
+        <li><strong>Sesame Cocoa Bites</strong> </li>
+        <li><strong>Banana Pudding trifle</strong> </li>
+        <li><strong>Strawberry Rice Krispy Treat (Can be made GF)</strong> </li>
+        <li><strong>Chocolate Torte (GF)</strong> </li>
+        <li><strong>Sexy Brownie with brownie, oreo, and blondie layers</strong> </li>
+        <li><strong>Panna Cotta Cups with strawberry crumble and fresh berries (seasonal) (GF)</strong> </li>
+        <li><strong>Pretzel Bread Pudding with whipped cream</strong> </li>
+        <li><strong>Mini Strawberry Shortcakes Trifles (seasonal)</strong> </li>
+        <li><strong>Chocolate Truffles (Strawberry, Dark Chocolate Orange, Milk Chocolate Honey, Vegan and Seasonal Flavors Available) (GF)</strong> </li>
       </ul>
       <h3 class="mb-3 mt-5">Cake Flavors</h3>
       <ul>
-        <li><strong>Carrot Cake</strong> with cream cheese frosting</li>
-        <li><strong>Red Velvet</strong> with cream cheese frosting and raspberries</li>
-        <li><strong>Portillos Chocolate Cake</strong> with espresso buttercream</li>
+        <li><strong>Carrot Cake with cream cheese frosting and toasted coconut</strong> </li>
+        <li><strong>Red Velvet with cream cheese frosting, ganache and raspberries</strong> </li>
+        <li><strong>Chocolate Peanut butter, devil&#39;s food cake, peanut butter pudding, chocolate ganache</strong> </li>
         <li><strong>German Chocolate Cake</strong> </li>
-        <li><strong>Funfetti Cake</strong> with caramelized milk crumble and buttercream</li>
-        <li><strong>Chocolate Cheerwine Cake</strong> (GF) with buttercream</li>
-        <li><strong>S’more Cake</strong> with devil's food cake, graham cracker pudding, marshmallow pudding, and bruleed swiss meringues</li>
+        <li><strong>Banana Cake, dulce pudding, buttercream</strong> </li>
+        <li><strong>Chocolate Cheerwine Cake (GF) with buttercream</strong> </li>
+        <li><strong>Orange Dreamsicle, Sicilian orange cake, diplomat cream, citrus buttercream</strong> </li>
+        <li><strong>S'more Cake with devil&#39;s food cake, graham cracker pudding, marshmallow pudding, and bruleed swiss meringues</strong> </li>
       </ul>
   </div>
 </section>
