--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -4,7 +4,7 @@ import config from "../config.json";
 
 <div id="top">
   <div class="text-center">
-    <img class="mx-auto d-block" src="/images/logo.jpg" alt="" />
+    <img class="mx-auto d-block img-fluid" src="/images/logo.jpg" alt="" />
 
     <a
       href="https://www.etsy.com/shop/Lillymaysdesserts"
