--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -30,8 +30,8 @@
                 <i class="fa fa-envelope"></i>
                 <h4>Email</h4>
                 <span
-                  ><a href="heather@lillymaysdesserts.com"
-                    >heather@lillymaysdesserts.com</a
+                  ><a href="mailto:lillymaysdesserts@gmail.com"
+                      >lillymaysdesserts@gmail.com</a
                   >
                 </span>
               </div>
