--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,6 +3,7 @@ import About from "../components/About.astro";
 import Contact from "../components/Contact.astro";
 import Grid from "../components/Grid.astro";
 import Header from "../components/Header.astro";
+import Testimonials from "../components/Testimonials.astro";
 import Layout from "../layouts/Layout.astro";
 ---
 
@@ -12,6 +13,10 @@ import Layout from "../layouts/Layout.astro";
 
   <!-- {% include about.html %} -->
   <About />
+
+  <!-- {% include testimonials.html %} -->
+  <Testimonials />
+
   <!-- {% include grid.html %} -->
   <Grid />
 
