--- a/src/components/Testimonials.astro
+++ b/src/components/Testimonials.astro
@@ -33,11 +33,14 @@ import testimonials from "../testimonials.json";
     background-color: #f8f9fa;
   }
 
+  #testimonials .section-heading {
+    margin-bottom: 50px;
+  }
+
   .testimonial-item {
     background-color: #fff;
     padding: 30px;
     border-radius: 10px;
-    margin-bottom: 30px;
     box-shadow: 0 2px 15px rgba(0, 0, 0, 0.1);
     transition: all 0.3s ease;
     height: 100%;
@@ -79,9 +82,13 @@ import testimonials from "../testimonials.json";
     margin-bottom: 0;
   }
 
+  #testimonials [class*="col-"] {
+    margin-bottom: 30px;
+  }
+
   @media (max-width: 992px) {
-    .testimonial-item {
-      margin-bottom: 20px;
+    #testimonials [class*="col-"] {
+      margin-bottom: 25px;
     }
   }
 
