--- a/src/components/Testimonials.astro
+++ b/src/components/Testimonials.astro
@@ -9,11 +9,15 @@ import testimonials from "../testimonials.json";
     </div>
     <div class="row">
       {
-        testimonials.map((testimonial) => (
+        testimonials.map((testimonial, index) => (
           <div class="col-lg-4 col-md-6 col-sm-12">
-            <div class="testimonial-item">
+            <div
+              class="testimonial-item"
+              data-testimonial={index}
+              onclick="this.classList.toggle('expanded')"
+            >
               <div class="testimonial-content">
-                <p>"{testimonial.content}"</p>
+                <p class="testimonial-text">"{testimonial.content}"</p>
               </div>
               <div class="testimonial-author">
                 <h4>{testimonial.name}</h4>
@@ -46,6 +50,7 @@ import testimonials from "../testimonials.json";
     height: 100%;
     display: flex;
     flex-direction: column;
+    cursor: pointer;
   }
 
   .testimonial-item:hover {
@@ -58,7 +63,7 @@ import testimonials from "../testimonials.json";
     margin-bottom: 20px;
   }
 
-  .testimonial-content p {
+  .testimonial-text {
     font-size: 14px;
     line-height: 1.6;
     color: #666;
@@ -68,6 +73,13 @@ import testimonials from "../testimonials.json";
     display: -webkit-box;
     -webkit-line-clamp: 6;
     -webkit-box-orient: vertical;
+    transition: all 0.3s ease;
+  }
+
+  .testimonial-item.expanded .testimonial-text {
+    display: block;
+    overflow: visible;
+    -webkit-line-clamp: unset;
   }
 
   .testimonial-author {
@@ -101,7 +113,7 @@ import testimonials from "../testimonials.json";
       padding: 20px;
     }
 
-    .testimonial-content p {
+    .testimonial-text {
       -webkit-line-clamp: 8;
     }
   }
