Add reviews header

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -60,6 +60,9 @@ const { title } = Astro.props;
                 </li>
                 <li class="scroll-to-section"><a href="/#about">About</a></li>
                 <li class="scroll-to-section">
+                  <a href="/#testimonials">Reviews</a>
+                </li>
+                <li class="scroll-to-section">
                   <a href="/#grid">Gallery</a>
                 </li>
                 <li><a href="/menu">Menu</a></li>
