--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -4,17 +4,15 @@ import config from "../config.json";
 
 <div id="top">
   <div class="text-center">
-      <img class="mx-auto d-block img-fluid" src="/images/logo2.webp" width="400px" alt="Lilly May's Desserts logo - handcrafted gourmet dessert catering in Asheville, North Carolina" />
-
-    <a
-      href="https://www.etsy.com/shop/Lillymaysdesserts"
-      class="mt-5 btn btn-danger mx-auto scroll-to-section"
-    >
-      Order on Etsy
-    </a>
+    <img
+      class="mx-auto d-block img-fluid"
+      src="/images/logo2.webp"
+      width="400px"
+      alt="Lilly May's Desserts logo - handcrafted gourmet dessert catering in Asheville, North Carolina"
+    />
     <a
       href="#reservation"
-      class="mt-5 btn btn-outline-danger mx-auto scroll-to-section"
+      class="mt-5 btn btn-danger mx-auto scroll-to-section"
     >
       Contact Us
     </a>
