Add Gooogle link

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -17,13 +17,16 @@ import config from "../config.json";
       Contact Us
     </a>
     <div class="top-social">
-      <a aria-label="Etsy" href={config.links.etsy}
-        ><i class="fab fa-etsy"></i></a
+      <a aria-label="Google" target="_blank" href={config.links.google}
+        ><i class="fab fa-google"></i></a
       >
-      <a aria-label="Facebook" class="m-5" href={config.links.facebook}
-        ><i class="fab fa-facebook"></i></a
+      <a
+        aria-label="Facebook"
+        class="m-5"
+        target="_blank"
+        href={config.links.facebook}><i class="fab fa-facebook"></i></a
       >
-      <a aria-label="Instagram" href={config.links.instagram}
+      <a aria-label="Instagram" target="_blank" href={config.links.instagram}
         ><i class="fab fa-instagram"></i></a
       >
     </div>
