--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -87,15 +87,25 @@ const { title } = Astro.props;
             <div class="right-text-content">
               <ul class="social-icons">
                 <li>
-                  <a href={config.links.etsy}><i class="fab fa-etsy"></i></a>
+                  <a
+                    target="_blank"
+                    aria-label="Google"
+                    href={config.links.google}><i class="fab fa-google"></i></a
+                  >
                 </li>
                 <li>
-                  <a href={config.links.facebook}
+                  <a
+                    target="_blank"
+                    aria-label="Facebook"
+                    href={config.links.facebook}
                     ><i class="fab fa-facebook-f"></i></a
                   >
                 </li>
                 <li>
-                  <a href={config.links.instagram}
+                  <a
+                    target="_blank"
+                    aria-label="Instagram"
+                    href={config.links.instagram}
                     ><i class="fab fa-instagram"></i></a
                   >
                 </li>
